--- a/package.json
+++ b/package.json
@@ -1,9 +1,19 @@
 {
+  "name": "comprovante-bot",
+  "version": "1.0.0",
+  "main": "api/server.js",
+  "scripts": {
+    "start": "node api/server.js"
+  },
   "dependencies": {
-    "axios": "^1.8.4",
-    "body-parser": "^1.20.3",
+    "axios": "^1.6.8",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
+
