--- a/vercel.json
+++ b/vercel.json
@@ -13,14 +13,11 @@
         "routes": [
         {
             "src": "/api/(.*)",
-            "dest": "/api/server.js"
+            "dest": "api/server.js"
         },
         {
             "src": "/(.*)",
-            "dest": "/index.html",
-            "headers": {
-            "Cache-Control": "no-cache"
-            }
+            "dest": "index.html"
         }
         ]
     }
