--- a/package.json
+++ b/package.json
@@ -1,19 +1,13 @@
 {
   "name": "comprovante-bot",
   "version": "1.0.0",
-  "main": "api/server.js",
   "scripts": {
-    "start": "node api/server.js"
+    "start": "node api/send-location.js"
   },
   "dependencies": {
-    "axios": "^1.6.8",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2"
+    "axios": "^1.6.8"
   },
   "engines": {
     "node": "18.x"
   }
 }
-
