--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
         "version": 2,
         "builds": [
         {
-            "src": "api/server.js",
+            "src": "api/**/*.js",
             "use": "@vercel/node"
         },
         {
@@ -13,11 +13,11 @@
         "routes": [
         {
             "src": "/api/(.*)",
-            "dest": "api/server.js"
+            "dest": "/api/$1.js"
         },
         {
             "src": "/(.*)",
-            "dest": "index.html"
+            "dest": "/index.html"
         }
         ]
     }
